--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,4 +42,24 @@ iframe#tela {
     left: 22px;
 }
 
+section#redes-sociais img {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+   
+    
+}
+section#redes-sociais{
+    text-align: right;
+}
+
+section#redes-sociais img:hover  {
+    border: 2px solid rgba(255, 255, 255, 0.596);
+}
+
+
+
 
